force-app/main/default/objects/Transitions_Item__c/Transitions_Item__c.object-meta.xml
<CustomObject>
    <label>Transitions Item</label>
    <nameField>
        <label>Transitions Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transitions Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>