force-app/main/default/objects/Transitions_Item__c/fields/Ext_Num__c.field-meta.xml
<CustomField>
    <fullName>Ext_Num__c</fullName>
    <externalId>true</externalId>
    <label>Ext Num</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>