force-app/main/default/objects/Transitions_Item__c/fields/New_Item__c.field-meta.xml
<CustomField>
    <fullName>New_Item__c</fullName>
    <label>New Item</label>
    <length>30</length>
    <type>Text</type>
</CustomField>