force-app/main/default/objects/Transitions_Item__c/fields/Old_Item__c.field-meta.xml
<CustomField>
    <fullName>Old_Item__c</fullName>
    <label>Old Item</label>
    <length>30</length>
    <type>Text</type>
</CustomField>